--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <tittle></tittle>
-    <link rel="stylesheet"  href="styles.css"/>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <h1>Un super titre</h1>
+    <h1>Un super titre!</h1>
 </body>
 </html>
